--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
         <div id="i" class="container">
             <div class="nav-brand">
-                <a href="#i"><img class="logo" src="/img/logo recortada.png" alt=""></a>
+                <a href="#i"><img class="logo" src="/ai-expert/img/logo recortada.png" alt=""></a>
             </div>
             <div class="nav-links">
                 <a href="#services">Serviços</a>
                 <a href="#advantages">Vantagens</a>
                 <a href="#pricing">Planos</a>
-                <a href="https://wa.me/5517991387471?text=Quero%20saber%20mais%20sobre%20seus%20serviços%20de%20IA" class="nav-cta" target="_blank">Começar Agora</a>
+                <a href="https://wa.me/551731020907?text=Quero%20saber%20mais%20sobre%20seus%20serviços%20de%20IA%20gostaria%20de%20conversar%20sobre%20o%20ConversaAI" class="nav-cta" target="_blank">Começar Agora</a>
             </div>
         </div>
     </nav>
@@ -37,7 +37,7 @@
             <div class="hero-content">
                 <h1>Construído para o Futuro das Soluções de IA</h1>
                 <p>Transforme o seu negócio com conversas inteligentes e humanizadas, convertendo mais vendas de uma maneira mais econômica.</p>
-                <a id="btn-init" href="https://wa.me/5517991387471?text=Estou%20interessado%20nos%20seus%20serviços%20de%20IA%20e%20gostaria%20de%20conversar" class="cta-btn primary" target="_blank">
+                <a id="btn-init" href="https://wa.me/551731020907?text=Estou%20interessado%20nos%20seus%20serviços%20de%20IA%20e%20gostaria%20de%20conversar%20sobre%20o%20CoversaAI" class="cta-btn primary" target="_blank">
                     Iniciar Conversa no WhatsApp
                 </a>
             </div>
@@ -64,22 +64,22 @@
                     <div class="service-icon">
                         <div class="icon-shape shape-1"></div>
                     </div>
-                    <h3>Automação Inteligente</h3>
-                    <p>Otimize seus fluxos de trabalho com automação baseada em IA que aprende e se adapta às necessidades do seu negócio.</p>
+                    <h3>Automação</h3>
+                    <p>Otimize seus fluxos de trabalho com uma automação baseada em IA que aprende e se adapta às necessidades do seu negócio.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <div class="icon-shape shape-2"></div>
                     </div>
-                    <h3>Trabalho 24/7</h3>
-                    <p>Inteligência artificial operando 24/7, garantindo respostas rápidas e atendimento contínuo para seus clientes, sem interrupções.</p>
+                    <h3>24/7</h3>
+                    <p>Inteligência artificial operando 24/7, garantindo respostas rápidas e atendimento contínuo aos seus clientes, sem interrupções.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <div class="icon-shape shape-3"></div>
                     </div>
                     <h3>Integração Perfeita</h3>
-                    <p>Conecte nossas soluções de IA aos seus sistemas existentes para criar um ecossistema empresarial inteligente.</p>
+                    <p>Conecte nossas soluções de IA aos seus sistemas existentes e crie um ecossistema empresarial inteligente.</p>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
         <img src="img/dashoboard.png" alt="Dashboard">
         <div class="card-text">
           <h3>📊 Painel de Indicadores</h3>
-          <p>Acompanhe atendimentos, equipe e desempenho em tempo real com KPIs claros.</p>
+          <p>Acompanhe atendimentos, equipe e desempenho em tempo real com KPIs claros e objetivos.</p>
         </div>
       </div>
 
@@ -105,7 +105,7 @@
         <img src="img/integracao.png" alt="Central de Atendimento">
         <div class="card-text">
           <h3>💬 Conversas com Controle</h3>
-          <p>Gerencie filas, aceite interações e visualize todas as mensagens com organização.</p>
+          <p>Gerencie filas, aceite interações e visualize todas as mensagens de forma organizada.</p>
         </div>
       </div>
 
@@ -113,7 +113,7 @@
         <img src="img/calendario.png" alt="Agendamento Inteligente">
         <div class="card-text">
           <h3>📅 Calendário Integrado</h3>
-          <p>Envie mensagens com horário marcado, nome e motivo — sem esforço manual.</p>
+          <p>Envie mensagens com horário marcado, nome e motivo - tudo automaticamente, sem esforço manual.</p>
         </div>
       </div>
 
@@ -121,7 +121,7 @@
         <img src="img/campanha.png" alt="Campanhas">
         <div class="card-text">
           <h3>📣 Campanhas com Segurança</h3>
-          <p>Evite bloqueios e mantenha entregabilidade com intervalos controlados.</p>
+          <p>Evite bloqueios e garanta entregabilidade com intervalos controlados.</p>
         </div>
       </div>
     </div>
@@ -135,29 +135,29 @@
     <section id="advantages">
         <div class="container">
             <div class="section-header">
-                <h2>Por Que Escolher Nossas Soluções de IA</h2>
+                <h2>Descubra as vantagens que tornam nossas soluções de IA únicas no mercado.</h2>
                 <p>Conheça as vantagens que diferenciam nossos serviços de IA da concorrência.</p>
             </div>
             <div class="advantages-grid">
                 <div class="advantage-card">
                     <div class="advantage-number">01</div>
                     <h3>Eficiência</h3>
-                    <p>Reduza custos operacionais com automação de processos e fluxos de trabalho otimizados.</p>
+                    <p>Reduza custos operacionais com automação inteligente e fluxos de trabalho otimizados.</p>
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-number">02</div>
                     <h3>Inovação</h3>
-                    <p>Mantenha-se à frente com tecnologia de IA de ponta que evolui com seu negócio e as demandas do mercado.</p>
+                    <p>Mantenha-se à frente com tecnologia de IA de ponta, que evolui com seu negócio e acompanha as demandas do mercado.</p>
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-number">03</div>
                     <h3>Escalabilidade</h3>
-                    <p>Cresça sem limites com soluções de IA que se adaptam de startups a grandes empresas.</p>
+                    <p>Cresça sem limites com soluções de IA que se adaptam desde startups até grandes empresas.</p>
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-number">04</div>
                     <h3>Foco no Usuário</h3>
-                    <p>Desenhado para uma experiência intuitiva com curva de aprendizado mínima e máxima produtividade.</p>
+                    <p>Projetado para oferecer uma experiência intuitiva, com curva de aprendizado mínima e máxima produtividade.</p>
                 </div>
             </div>
         </div>
@@ -168,40 +168,40 @@
       <div class="agents-row">
         <div class="agent-text">
           <h3>💰 Agente de Cobrança</h3>
-          <p>Envia lembretes automáticos, links de pagamento e negocia de forma humanizada.</p>
+          <p>Envia lembretes automáticos, links de pagamento e realiza negociações de forma humanizada, e o melhor: sem bloqueios e interrupções nas mensagens</p>
         </div>
         <div class="agent-image">
-          <img class="imagem imagem_cobranca" src="img/ChatGPT Image Jul 30, 2025, 03_52_24 PM.png" alt="Agente de Cobrança">
+          <img class="imagem imagem_cobranca" src="img/e633bd2a-875d-4aee-84a4-88d679806eb9.jpg" alt="Agente de Cobrança">
         </div>
       </div>
 
       <div class="agents-row reverse">
         <div class="agent-image">
-          <img class="imagem imagem_atendimento" src="img/f8598986-2d2e-4981-9da8-8f72156f2566.png" alt="Agente de Atendimento">
+          <img class="imagem imagem_atendimento" src="img/d0044237-8042-4d9d-b54b-0370156af1eb.jpg" alt="Agente de Atendimento">
         </div>
         <div class="agent-text">
           <h3>💬 Agente de Atendimento</h3>
-          <p>Coleta informações, identifica intenções e direciona de forma inteligente.</p>
+          <p>Coleta informações, entende intenções e direciona o atendimento de forma inteligente.</p>
         </div>
       </div>
 
       <div class="agents-row">
         <div class="agent-text">
           <h3>📈 Agente de Vendas</h3>
-          <p>Conduz o cliente até a conversão com mensagens estratégicas e personalizadas.</p>
+          <p>Conduz o cliente até a conversão com mensagens personalizadas e estrategicamente pensadas, criando um funil eficiênte de venda.</p>
         </div>
         <div class="agent-image">
-          <img class="imagem imagem_vendas" src="img/687c52fd-f2d2-47b0-9650-9c08c038c33c.png" alt="Agente de Vendas">
+          <img class="imagem imagem_vendas" src="img/d7efc172-6b23-4369-846a-ac64738b58f6.jpg" alt="Agente de Vendas">
         </div>
       </div>
 
       <div class="agents-row reverse">
         <div class="agent-image">
-          <img class="imagem imagem_suporte" src="img/c4483f08-7c03-40d6-9c5d-264522fcaafb.png" alt="Agente de Suporte">
+          <img class="imagem imagem_suporte" src="img/282a64ae-0e89-4883-9872-e381f261ed23.jpg" alt="Agente de Suporte">
         </div>
         <div class="agent-text">
           <h3>🛠️ Agente de Suporte</h3>
-          <p>Resolve dúvidas, gera tickets e mantém o acompanhamento sem necessidade humana.</p>
+          <p> Resolve dúvidas, gera tickets e acompanha atendimentos sem intervenção humana.</p>
         </div>
       </div>
     </div>
@@ -212,7 +212,7 @@
   <div class="container">
     <div class="section-header">
       <h2>Escolha Seu Plano de IA</h2>
-      <p>Selecione o plano ideal para as necessidades do seu negócio. Todos incluem consulta via WhatsApp e assistência na configuração.</p>
+      <p>Escolha o plano ideal para o seu negócio. Todos incluem atendimento via WhatsApp e suporte completo na configuração.</p>
     </div>
 
     <div class="pricing-grid">
@@ -231,7 +231,7 @@
           <li>Fluxo simples ou Suporte</li>
           <li>1 usuário</li>
         </ul>
-        <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Start" class="cta-btn secondary" target="_blank">
+        <a href="https://wa.me/551731020907?text=Tenho%20interesse%20no%20Plano%20Start%20do%20ConversaAI" class="cta-btn secondary" target="_blank">
           Escolher Plano & Falar no WhatsApp
         </a>
       </div>
@@ -248,14 +248,14 @@
           </div>
         </div>
         <ul class="plan-features">
-          <li class="inherits"> Tudo do Plano Start<span class="plus">＋</span></li>
+          <li class="inherits">Plano Start<span class="plus">＋</span></li>
           <li>Agente de IA</li>
           <li>Relatórios fluídos</li>
           <li>5 usuários</li>
           <li>Automação de atendimento</li>
           <li>Automação de vendas</li>
         </ul>
-        <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Midlle" class="cta-btn secondary" target="_blank">
+        <a href="https://wa.me/551731020907?text=Tenho%20interesse%20no%20Plano%20Midlle%20do%20ConversaAI" class="cta-btn secondary" target="_blank">
           Escolher Plano & Falar no WhatsApp
         </a>
       </div>
@@ -271,13 +271,13 @@
           </div>
         </div>
         <ul class="plan-features">
-          <li class="inherits"> Tudo do Plano Midlle<span class="plus">＋</span></li>
+          <li class="inherits">Plano Midlle<span class="plus">＋</span></li>
           <li>Agente para IA avançado</li>
           <li>10 usuários</li>
-          <li>Integrações ERP/CRM ou <h4 class="destaque">GATEWAY</h4> de pagamentos</li>
+          <li>Integrações ERP/CRM ou <h4 class="destaque">GATEWAY de pagamentos</h4></li>
           <li>Múltiplos canais</li>
         </ul>
-        <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Full" class="cta-btn primary" target="_blank">
+        <a href="https://wa.me/551731020907?text=Tenho%20interesse%20no%20Plano%20Full%20do%20ConversaAI" class="cta-btn primary" target="_blank">
           Escolher Plano & Falar no WhatsApp
         </a>
       </div>
@@ -293,10 +293,10 @@
           </div>
         </div>
         <ul class="plan-features">
-          <li class="inherits"> Tudo do Plano Full<span class="plus">＋</span></li>
+          <li class="inherits">Plano Full<span class="plus">＋</span></li>
           <li>Sistema completo para Cobrança de Dívidas</li>
         </ul>
-        <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Full%20+%20Cobrança" class="cta-btn primary" target="_blank">
+        <a href="https://wa.me/551731020907?text=Tenho%20interesse%20no%20Plano%20Full%20+%20Cobrança%20do%20ConversaAI" class="cta-btn primary" target="_blank">
           Escolher Plano & Falar no WhatsApp
         </a>
       </div>
@@ -310,9 +310,9 @@
     <section id="cta-section">
         <div class="container">
             <div class="cta-content">
-                <h2>Pronto para Transformar Seu Negócio?</h2>
-                <p>Junte-se a milhares de empresas que já utilizam soluções de IA para impulsionar crescimento e inovação.</p>
-                <a href="https://wa.me/5511999999999?text=Estou%20pronto%20para%20transformar%20meu%20negócio%20com%20soluções%20de%20IA.%20Vamos%20conversar%20sobre%20como%20começar" class="cta-btn primary large" target="_blank">
+                <h2>Pronto para transformar seu negócio?</h2>
+                <p>Junte-se a milhares de empresas que já usam IA para impulsionar crescimento e inovação.</p>
+                <a href="https://wa.me/551731020907?text=Estou%20pronto%20para%20transformar%20meu%20negócio%20com%20soluções%20de%20IA.%20Vamos%20conversar%20sobre%20como%20começar%20com%20o%20ConverAI" class="cta-btn primary large" target="_blank">
                     Fale com um Especialista Agora
                 </a>
             </div>
@@ -336,14 +336,15 @@
                     </div>
                     <div class="footer-column">
                         <h4>Empresa</h4>
-                        <a href="#advantages">Sobre Nós</a>
+                        
                         <a href="#pricing">Planos</a>
-                        <a href="https://wa.me/5511999999999?text=Preciso%20de%20suporte%20com%20meu%20serviço%20de%20IA" target="_blank">Suporte</a>
+                        <a href="https://wa.me/551731020907?text=Preciso%20de%20suporte%20com%20meu%20serviço%20de%20IA" target="_blank">Suporte</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contato</h4>
-                        <a href="mailto:contact@aiexpert.com">conversaai@gmail.com</a>
-                        <a href="https://wa.me/5511999999999" target="_blank">WhatsApp</a>
+                        <a href="mailto:contact@aiexpert.com">contato@negociarie.com.br</a>
+                        <a href="#">Telefone - (17) 3321 7878</a>
+                        <a href="https://wa.me/551731020907" target="_blank">WhatsApp</a>
                     </div>
                 </div>
             </div>
