--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div id="i" class="container">
             <div class="nav-brand">
-                <a href="#i"><img class="logo" src="/ai-expert/img/logo recortada.png" alt=""></a>
+                <a href="#i"><img class="logo" src="img/logo recortada.png" alt=""></a>
             </div>
             <div class="nav-links">
                 <a href="#services">Serviços</a>
