correcao nos planos

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
           <li>Chatbot básico</li>
           <li>Fluxo simples ou Suporte</li>
           <li>1 usuário</li>
+
         </ul>
         <a href="https://wa.me/551731020907?text=Tenho%20interesse%20no%20Plano%20Start%20do%20ConversaAI" class="cta-btn secondary" target="_blank">
           Escolher Plano & Falar no WhatsApp
@@ -237,8 +238,7 @@
       </div>
 
       <!-- PLANO MIDLLE -->
-      <div class="plan-card featured">
-        <div class="plan-badge">Mais Popular</div>
+      <div class="plan-card">
         <div class="plan-header">
           <h3>Plano Midlle</h3>
           <div class="plan-price">
@@ -254,6 +254,7 @@
           <li>5 usuários</li>
           <li>Automação de atendimento</li>
           <li>Automação de vendas</li>
+          <li>2 canais liberados</li>
         </ul>
         <a href="https://wa.me/551731020907?text=Tenho%20interesse%20no%20Plano%20Midlle%20do%20ConversaAI" class="cta-btn secondary" target="_blank">
           Escolher Plano & Falar no WhatsApp
@@ -261,7 +262,8 @@
       </div>
 
       <!-- PLANO FULL -->
-      <div class="plan-card">
+   <div class="plan-card featured">
+        <div class="plan-badge">Mais Popular</div>
         <div class="plan-header">
           <h3>Plano Full</h3>
           <div class="plan-price">
@@ -275,7 +277,7 @@
           <li>Agente para IA avançado</li>
           <li>10 usuários</li>
           <li>Integrações ERP/CRM ou <h4 class="destaque">GATEWAY de pagamentos</h4></li>
-          <li>Múltiplos canais</li>
+          <li>10 canais liberados</li>
         </ul>
         <a href="https://wa.me/551731020907?text=Tenho%20interesse%20no%20Plano%20Full%20do%20ConversaAI" class="cta-btn primary" target="_blank">
           Escolher Plano & Falar no WhatsApp
@@ -295,6 +297,7 @@
         <ul class="plan-features">
           <li class="inherits">Plano Full<span class="plus">＋</span></li>
           <li>Sistema completo para Cobrança de Dívidas</li>
+          <li>Múltiplos canais liberados</li>
         </ul>
         <a href="https://wa.me/551731020907?text=Tenho%20interesse%20no%20Plano%20Full%20+%20Cobrança%20do%20ConversaAI" class="cta-btn primary" target="_blank">
           Escolher Plano & Falar no WhatsApp
